--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <title>Test6 by gitwood</title>
@@ -11,36 +11,46 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Test6</h1>
+      <h1 class="project-name">Погода</h1>
       <h2 class="project-tagline">test repository</h2>
-      <a href="https://github.com/gitwood/test6" class="btn">View on GitHub</a>
-      <a href="https://github.com/gitwood/test6/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/gitwood/test6/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://www.gismeteo.ru/city/hourly/4368/6/" class="btn">Москва</a>
+      <a href="https://www.gismeteo.ru/city/hourly/4618/6/" class="btn">Самара</a>
+      <a href="https://www.gismeteo.ru/city/hourly/5233/6/" class="btn">Сочи</a>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>О Москве.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Москва — столица России; остальные эпитеты по сравнению с этим меркнут. Как ни банально это звучит, Москва — город контрастов. 
+Это и «третий Рим», и «большая деревня», и «нерезиновая», место для избранных и для всех. Москва — это Содом и Гоморра в одном 
+флаконе и чинная тишина почти совсем деревенских переулков Замоскворечья, ощетинившийся острыми стеклянными гранями Москва-Сити
+и непостижимо как сохранившиеся деревянные избы с наличниками в тупиках Китай-города, запись на «Бэнтли» на год вперед и нищие
+у ворот «Новодевички», небывало холодные зимы и опять-таки небывало жаркие лета, «наш ответ Чемберлену» суперсовременный инноцентр
+Сколково и заповедные леса всего в паре десятков километров от Кремля... словом, для каждой реалии московской жизни непременно
+найдется пресловутый контраст.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>О Самаре.</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>В Самаре состоялась презентация нового проекта «Космоград». К участию в нем приглашаются все жители. Идея заключается в том, 
+чтобы поддержать имидж региона, как мирового центра ракетостроения, а историю развития космонавтики перенести на туристическую 
+карту областной столицы. Этот проект нацелен на то, чтобы сделать доступной историю развития авиации и космонавтики и создать
+уникальную туристическую инфраструктуру в регионе. И в тоже время подержать имидж региона как мирового центра ракетостроения.
+По численности аэрокосмический кластер Самарской области  - один из крупнейших в России. Каким будет парк - самарский "Космоград"
+-  зависит от самих самарцев. На специальном сайте уже началось голосование и принимаются идеи. Проект должен объединить сразу
+несколько площадок - это и знаменитая ракета, и наноград "Гагарин-Центр", и Ботанический сад. Идею уже поддержал герой России,
+летчик-космонавт Олег Кононенко. </p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>О Сочи.</h3>
+
+<p>Все приезжающие в санаторий «Актер» имеют возможность поселиться в комфортабельных номерах 16-ти этажного корпуса. А поскольку 
+лечение в Сочи подразумевает полный комфорт, гости санатория могут выбрать из номерного фонда стандарт одноместный и двухместный,
+улучшенный Супериор, а так же семейный двухкомнатный Сьют.В санатории функционирует зимний закрытый плавательный бассейн с морской
+подогреваемой водой, зал лечебной физкультуры с многочисленными тренажерами, комплекс пляжных сооружений с двумя надводными соляриями, 
+сауна, кафе, пункт проката.</p>
+
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
